# tassie-trees-research-plan

./: .gitignore  .ztr-directory  LICENSE  README.md  _toc.yml  environment.yaml  myst.yml  project-timeline.md  pyproject.toml
citation-styles/: harvard-cite-them-right.csl
data/vector/: proposed_study_sites.geojson
doc/: 012_problem-statement.md  013_aims-and-objectives.md  014_study-locations.md  210_chapter1_introduction.md  911_appendix-1_proposed-timeline.md  _toc.yml  index.md
figures/: project-timeline.mmd
manuscript/: 000_index.md  011_background.md  014_study-locations.md  220_chapter2_paper1.md  911_appendix-1_proposed-timeline.md  research-plan-draft.md
notebooks/: ala_occurances.ipynb  burn_scar.ipynb  project_timeline.ipynb  satellite_data.py
src/tassie_trees_research_plan/: __main__.py
