[project]
authors = [{name = "Peter Jackson", email = "peterwjacko@protonmail.com"}]
name = "tassie-trees-research-plan"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["jupyterlab-myst>=2.4.2,<3"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
tassie_trees = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
geopandas = ">=1.0.1,<2"
rasterio = ">=1.4.3,<2"
statsmodels = ">=0.14.4,<0.15"
seaborn = ">=0.13.2,<0.14"
jupyter = ">=1.1.1,<2"
marimo = ">=0.13.6,<0.14"
mystmd = ">=1.3.27,<2"
texlive-core = ">=20230313,<20230314"
latexmk = ">=4.86a,<5"
pandoc = ">=3.7.0.1,<4"
