[project]
authors = [{name = "Peter Jackson", email = "peterwjacko@protonmail.com"}]
dependencies = []
name = "tassie-trees-research-plan"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
tassie_trees_research_plan = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
geopandas = ">=1.0.1,<2"
rasterio = ">=1.4.3,<2"
seaborn = ">=0.13.2,<0.14"
statsmodels = ">=0.14.4,<0.15"
jupyter = ">=1.1.1,<2"
marimo = ">=0.13.6,<0.14"
